--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,10 @@ junit/
 # Apache Ivy dependencies
 lib/
 
+# Visual Studio Code
+.vscode
+*.code-workspace
+
 # IntelliJ IDEA
 .idea
 out/
-
-# [ UML ]
-# Visual Paradigm backup files
-UML/*.bak*
-UML/*.vbak*
