--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
   <property name="junit.report.dir" value="${junit.output.dir}/report" />
   <property name="javadoc.output.dir" value="docs" />
   <property name="jar.file" value="${main.package}-${jar.version}.jar" />
-  <property name="exec.file" value="FITA-View" />
+  <property name="exec.file" value="fita-view" />
 
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.5.0" />
